Svelte 5 runes, deprecation fixes, new ladder

--- a/src/app.html
+++ b/src/app.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+	<title>RADDLE — The Transformation Ladder Game</title>
 	<meta charset="utf-8" />
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 	<meta name="viewport" content="width=device-width" />
